feat: swagger friend controller and fix this
